force-app/main/default/objects/cgcloud__Job_List__c/cgcloud__Job_List__c.object-meta.xml
<CustomObject>
    <description>Holds the job lists generated out of non-standard job definition lists.</description>
    <label>Job List</label>
    <nameField>
        <displayFormat>JL-{0000}</displayFormat>
        <label>Job List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>