force-app/main/default/objects/cgcloud__Job_List__c/fields/cgcloud__Description_JDL__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description_JDL__c</fullName>
    <description>Description of the Job Definition List</description>
    <formula>cgcloud__Job_Definition_List__r.cgcloud__Description__c</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>