force-app/main/default/objects/cgcloud__Job_List__c/fields/cgcloud__Done__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Done__c</fullName>
    <description>0: Not Done;
1: Done;
2: Canceled</description>
    <label>Done</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>