force-app/main/default/objects/cgcloud__Job_List__c/fields/cgcloud__Job_Definition_List__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Definition_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Job_Definition_List__c.cgcloud__Standard_Jobs__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Job_Definition_List__c</referenceTo>
    <relationshipLabel>Job Lists</relationshipLabel>
    <relationshipName>Job_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>