force-app/main/default/objects/cgcloud__Job_List__c/fields/cgcloud__Manager__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>