force-app/main/default/objects/cgcloud__Job_List__c/fields/cgcloud__Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Visit_Date__c</fullName>
    <formula>cgcloud__Visit__r.cgcloud__Start_Date__c</formula>
    <label>Visit Date</label>
    <type>Date</type>
</CustomField>