force-app/main/default/objects/cgcloud__Job_List__c/fields/cgcloud__Visit_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Visit_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Template</label>
    <referenceTo>cgcloud__Visit_Template__c</referenceTo>
    <relationshipLabel>Job Lists</relationshipLabel>
    <relationshipName>Job_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>