force-app/main/default/objects/cgcloud__Job_List__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Job_Definition_List__c</columns>
    <columns>cgcloud__Description_JDL__c</columns>
    <columns>cgcloud__Account__c</columns>
    <columns>cgcloud__Visit_Template__c</columns>
    <columns>cgcloud__Manager__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>cgcloud__Valid_From__c</columns>
    <columns>cgcloud__Valid_Thru__c</columns>
    <columns>cgcloud__Visit_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>